# halo_action_importer

./: .env  .env.template  .gitignore  Cargo.toml  README.md  Untitled
input/: example.csv  example.xlsx
sql/: README.md  groups.sql  simple.sql  single_group.sql
src/lib/: config.rs  lib.rs
src/lib/domain/: mod.rs
src/lib/domain/importer/: mod.rs  processor.rs  setup.rs  summary.rs
src/lib/domain/models/: action_object.rs  mod.rs
src/lib/inbound/: client.rs
src/lib/inbound/file/: csv.rs  excel.rs  mod.rs
src/lib/outbound/client/: action.rs
src/lib/outbound/client/auth/: mod.rs  token.rs
