[package]
name = "halo_action_importer"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
calamine = { version = "0.32.0", features = ["chrono"] }
chrono = { version = "0.4", features = ["serde"] }
colored = "3.0.0"
csv = "1.4.0"
dotenvy = "0.15"
log = "0.4.29"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
simplelog = "0.12.2"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["chrono"] }

[[bin]]
name = "halo_action_importer"
path = "src/bin/main.rs"

[lib]
path = "src/lib/lib.rs"
